--- a/thesis/intro/intro.tex
+++ b/thesis/intro/intro.tex
@@ -53,12 +53,16 @@ HIV is an enveloped single strand positive-sense retrovirus, an RNA virus which 
 The HIV genome encodes genes for at least two polyproteins and seven proteins:\\ % \gag{} and \pol{}, and seven proteins, \tat{}, \rev{}, \nef{}, \vpr{}, \vif{} and \vpu{}.
 \begin{description}
 	\item[\gag{}]
-		Gag (group specific antigen) is cleaved by viral protease to produce matrix, capsid, nucleocapsid and P6 protein along with two small spacer peptides SP1 and SP2. 
+		Gag (group specific antigens) is cleaved by viral protease to produce matrix, capsid, nucleocapsid and p6 protein along with two small spacer peptides SP1 and SP2. 
 		\begin{description}
 			\item[MA]
+				p17 MA (matrix)
 			\item[CA]
+				p24 CA (capsid) is a myristoylated membrane protein.
 			\item[NC]
-			\item[P6]
+				p7 NC (nucleocapsid)
+			\item[p6]
+				p6 (protein 6 kda) is a small protein which appears to primarily recruit cellular proteins to allow virion budding from the cell membrane \citep{Veronese1987,Goettlinger1991,Strack2003}.
 		\end{description}
 			
 
@@ -66,18 +70,24 @@ The HIV genome encodes genes for at least two polyproteins and seven proteins:\\
 		Pol (polymerase) is cleaved by viral protease to produce reverse transcriptase, RNaseH, integrase and HIV protease. 
 		\begin{description}
 			\item[RT]
+				p51 RT (reverse transcriptase)
 			\item[RNase H]
+				p15 RNase H
 			\item[IN]
+				p31 IN (integrase)
 			\item[PR]
+				PR (protease)
 		\end{description}
 	\item[\env{}]
 		gp160 Env proteins traps CD4 in the endoplasmic reticulum \citep{Crise1990,Bour1991}
 	\item[\tat{}]
 		%http://www.sciencemag.org/content/260/5112/1320.abstract6
 	\item[\rev{}]
+		Rev trans-activator protein shuttles between the nucleus and cytoplasm \citep{Meyer1994} and causes the export of partially spliced and unspliced viral transcripts \citep{Sodroski1986,Feinberg1986,Knight1987,Malim1988,Gutman1988} from the nucleus through recognition of a structured RNA rev response element \citep{Malim1989,Malim1989a}.
 	\item[\nef{}]
-			Nef (negative factor) is a myristoylated membrane associated protein \citep{Yu1992} that is involved in multiple functions. Nef causes endocytosis of the HIV receptors CD4 \citep{Garcia1991,Benson1993,Aiken1994,Lama1999,Ross1999} and CCR5 \citep{Michel2005} and viral surveillance major histocompatibility complex molecules \citep{Schwartz1996,Collins1998,Stumptner-Cuvelette2001,Blagoveshchenskaya2002}. Nef also induces T cell activation through interactions with signaling kinases and the T cell receptor \citep{Xu1999,Schrager1999,Wang2000,Simmons2001,Schrager2002}. In contrast, Nef in most other primate lentiviruses inhibits activation and inflammation \citep{Schindler2006} perhaps indicating that the gain of \vpu{} in HIV-1 and its simian relatives allowed the loss of the immune inhibition traits of \nef{} and contributes to the increased pathogenecity in these viruses \citep{Kirchoff2008,Kirchoff2009}.
+			Nef (negative factor) is a myristoylated membrane associated protein \citep{Yu1992} that is involved in multiple functions. Nef causes endocytosis of the HIV receptors CD4 \citep{Garcia1991,Benson1993,Aiken1994,Lama1999,Ross1999} and CCR5 \citep{Michel2005} and viral surveillance major histocompatibility complex molecules \citep{Schwartz1996,Collins1998,Stumptner-Cuvelette2001,Blagoveshchenskaya2002}. Nef also induces T cell activation through interactions with signaling kinases and the T cell receptor \citep{Xu1999,Schrager1999,Wang2000,Simmons2001,Schrager2002}. In contrast, Nef in most other primate lentiviruses inhibits activation and inflammation \citep{Schindler2006} perhaps indicating that the gain of \vpu{} in HIV-1 and its simian relatives allowed the loss of the immune inhibition traits of \nef{} and contributes to the increased pathogenecity in these viruses \citep{Kirchhoff2008,Kirchhoff2009}.
 	\item[\vpr{}]
+		Vpr (viral protein R)
 	\item[\vif{}]
 		Vif (viral infectivity factor) counteracts the cellular restriction factor APOBEC3G \citep{Sheehy2002} by excluding APOBEC3G from incorporation into the virion \citep{Mariani2003} and causing APOBEC3G to be ubiquitinated and degraded \citep{Sheehy2003,Marin2003,Yu2003}. APOBEC3G is otherwise packaged into virions \citep{Harris2003} and deaminates the HIV genome during reverse transcription causing G-to-A hypermutation \citep{Harris2003,Mangeat2003,Zhang2003,Lecossier2003}.
 	\item[\vpu{}]
