--- a/thesis/latency/latency.tex
+++ b/thesis/latency/latency.tex
@@ -84,7 +84,7 @@
 	\end{table}
 
 	\subsection{Genomic features}
-		A total of \nFeatures{} whole genome features for \cdFour{} T-cells were gathered from data sources indicated in Table \ref{tabVariables}.  For features encoded as peaks or hotspots, the log of the distance of each integration site to the nearest border was used for modeling. Integration sites from HIV 89.6 infection in primary \cdFour{} T cells (unpublished data) were used to count nearby integrations and determine a $\pm20$bp position weight matrix for integration targets. Illumina RNA-Seq from active \cdFour{} cells (unpublished data) was used to estimate raw cellular expression and fragments per kilobase of transcript per million mapped reads for genes as calculated by Cufflinks \citep{Trapnell2010}. For sequence-based data like RNA-Seq and ChIP-Seq, the number of reads aligned within a $\pm$ 50, 500, 5,000 50,000 and 500,000 bp windows of each integration site were counted and log transformed. In addition, chromatin state classifications derived from a hidden Markov model based on histone marks and a few binding factors \citep{Ernst2010} were included as binary variables. All data from previous genomic freezes were converted to hg19 using liftover \citep{Hinrichs2006}. 
+		A total of \nFeatures{} whole genome features for \cdFour{} T-cells were gathered from data sources indicated in Table \ref{tabVariables}.  For features encoded as peaks or hotspots, the log of the distance of each integration site to the nearest border was used for modeling. Integration sites from HIV 89.6 infection in primary \cdFour{} T cells \citep{Berry2014} were used to count nearby integrations and determine a $\pm20$bp position weight matrix for integration targets. Illumina RNA-Seq from active \cdFour{} cells (Chapter \ref{chapRnaSeq}) was used to estimate raw cellular expression and fragments per kilobase of transcript per million mapped reads for genes as calculated by Cufflinks \citep{Trapnell2010}. For sequence-based data like RNA-Seq and ChIP-Seq, the number of reads aligned within a $\pm$ 50, 500, 5,000 50,000 and 500,000 bp windows of each integration site were counted and log transformed. In addition, chromatin state classifications derived from a hidden Markov model based on histone marks and a few binding factors \citep{Ernst2010} were included as binary variables. All data from previous genomic freezes were converted to hg19 using liftover \citep{Hinrichs2006}. 
 
 	\begin{table}
 		\resizebox{\columnwidth}{!}{
