Sent abstract to Hannah
git-svn-id: https://microb98.med.upenn.edu/svn/scott/thesis@9954 acd2042c-187b-11de-8279-d8d34a11d372

--- a/thesis/sherrill-Mix_thesis.tex
+++ b/thesis/sherrill-Mix_thesis.tex
@@ -41,6 +41,15 @@ Xiaofen and Otto
 
 }
 \def\myabstract{ %%ABSTRACT_START%%
+	Over 35 million people are living with human immunodeficiency virus (HIV-1). The mechanisms causing integrated provirus to become latent, the diversity of spliced viral transcripts and the cellular response to infection are not fully characterized and hinder the eradication of HIV-1. We applied high-throughput sequencing to investigate the effects of host chromatin on proviral latency and variation of expression and splicing in both the host and virus during infection.
+
+	To evaluate the link between host chromatin and proviral latency, we compared genomic and epigenetic features to HIV-1 integration site data for latent and active provirus from five cell culture models. Latency was associated with chromosomal position within individual models. However, no shared mechanisms of latency were observed between cell culture models. These differences suggest that cell culture models may not completely reflect latency in patients.
+
+	We carried out two studies to explore mRNA populations during HIV infection. Single-molecule amplification and sequencing revealed that the clinical isolate \hivEight{} produces at least 109 different spliced mRNAs. Viral message populations differed between cell types, between human donors and longitudinally during infection. We then sequenced mRNA from control and \hivEight{}-infected primary human T cells. Over 17 percent of cellular genes showed altered activity associated with infection. These gene expression patterns differed from HIV infection in cell lines but paralleled infections in primary cells. Infection with \hivEight{} increased intron retention in cellular genes and abundance of RNA from human endogenous retroviruses. We also quantified the frequency and location of chimeric HIV-host RNAs. These two studies together provided a detailed accounting of both \hivEight{} and host expression and alternative splicing.
+
+	A more cost-effective method of detecting viral load would aid patients with poor access to healthcare. We developed improved methods for assaying HIV-1 RNA using loop-mediated isothermal amplification based on primers targeting regions of the HIV-1 genome conserved across subtypes. Combined with lab-on-a-chip technology, these techniques allow quantitative measurements of viral load in a point-of-care device targeted to resource-limited settings.
+
+	This work disclosed novel HIV-host interactions and developed techniques and knowledge that will aid in the study and management of HIV-1 infection.
 
 	%Replication of the human immunodeficiency virus requires integration into the host genome, expression and splicing of viral genes and usurpation of host cell machinery, all while avoiding host immune response.
 
@@ -60,18 +69,19 @@ Xiaofen and Otto
 
 	%To replicate, the human immunodeficiency virus (HIV-1) integrates a DNA copy of its RNA genome into host cell chromosomes. This provirus can commandeer host cell machinery to express viral genes and produce virions or alternatively remain latent for years. Here, we applied high-throughput sequencing techniques to investigate the latency, expression and splicing of HIV-1 and its effects on host cells.
 
-	Replication of the human immunodeficiency virus (HIV-1) requires integration into the host genome, expression of viral genes and usurpation of host cell machinery while avoiding immune response. Here, we applied high-throughput sequencing techniques to investigate the effects of host chromatin on proviral latency and the interplay of gene expression and alternative splicing between host cell and HIV-1. 
+	% Here, we applied high-throughput sequencing techniques to investigate the effects of host chromatin on proviral latency and the interplay of gene expression and alternative splicing between host cell and HIV-1. 
+	%Over 100 million people are infected with human immunodeficiency virus (HIV-1). The mechanisms causing integrated provirus to become latent, the diversity of spliced viral transcripts and the cellular response to infection are not fully characterized and contribute to the difficulty in eradicating HIV-1. Here, we applied high-throughput sequencing techniques to investigate the effects of host chromatin on proviral latency and how expression and splicing vary in both the host and virus during infection. 
 
 	%We investigated the effect of the chromosomal location of proviral integration on latency. We compared genomic and epigenetic features to integration site data for latent and active provirus from five cell culture models. Latency was associated with chromosomal position within individual models. However, no shared mechanisms of latency were observed between cell culture models. These differences suggest that cell culture models may not reflect latency in patients and that an easily-targetable mechanism for the induction of latent HIV is unlikely.
 
 	%Latent provirus profoundly hinder eradication yet the mechanisms which cause latency are not well understood.
-	 Latent provirus profoundly hinder eradication yet the mechanisms which cause latency are not well understood. We compared genomic and epigenetic features to integration site data for latent and active provirus from five cell culture models. Latency was associated with chromosomal position within individual models. However, no shared mechanisms of latency were observed between cell culture models. These differences suggest that cell culture models may not reflect latency in patients and that an easily-targetable mechanism for the induction of latent HIV is unlikely.
+	 %To evaluate the link between host chromatin and proviral latency, we compared genomic and epigenetic features of host chromatin to HIV-1 integration site data for latent and active provirus from five cell culture models. Latency was associated with chromosomal position within individual models. However, no shared mechanisms of latency were observed between cell culture models. These differences suggest that cell culture models may not completely reflect latency in patients.
 
-	We carried out two studies to explore mRNA populations during HIV infection. Single-molecule amplification and sequencing revealed that the clinical isolate \hivEight{} produces at least 109 different spliced mRNAs. Viral message populations differed between cell types, between human donors and longitudinally during infection. We then sequenced mRNA from control and \hivEight{}-infected primary human T cells. Over 17 percent of cellular genes showed altered activity associated with infection. These gene expression patterns differed from HIV infection in cell lines but paralleled infections in primary cells. Infection with \hivEight{} was associated with increased intron retention in cellular genes and an increased abundance of RNA from human endogenous retroviruses and retrotransposons. After filtering sequencing artifacts, we were able to quantify the frequency and location of chimeric HIV-host RNAs. These two studies together provided a detailed accounting of both \hivEight{} and host expression and alternative splicing.
+	%We carried out two studies to explore mRNA populations during HIV infection. Single-molecule amplification and sequencing revealed that the clinical isolate \hivEight{} produces at least 109 different spliced mRNAs. Viral message populations differed between cell types, between human donors and longitudinally during infection. We then sequenced mRNA from control and \hivEight{}-infected primary human T cells. Over 17 percent of cellular genes showed altered activity associated with infection. These gene expression patterns differed from HIV infection in cell lines but paralleled infections in primary cells. Infection with \hivEight{} was associated with increased intron retention in cellular genes and an increased abundance of RNA from human endogenous retroviruses. After filtering sequencing artifacts, we were able to quantify the frequency and location of chimeric HIV-host RNAs. These two studies together provided a detailed accounting of both \hivEight{} and host expression and alternative splicing.
 
-	We developed improved methods for assaying HIV RNA using loop-mediated isothermal amplification based on primers targeting regions of the HIV-1 genome conserved across subtypes. Combined with lab-on-a-chip technology, these techniques allow quantitative measurements of viral load in a point-of-care device targeted to resource-limited settings.
+	 %A more cost-effective method of detecting viral load would aid patients with poor access to healthcare. We developed improved methods for assaying HIV RNA using loop-mediated isothermal amplification based on primers targeting regions of the HIV-1 genome conserved across subtypes. Combined with lab-on-a-chip technology, these techniques allow quantitative measurements of viral load in a point-of-care device targeted to resource-limited settings.
 
-	This work disclosed novel HIV-host interactions and developed techniques and knowledge that will aid in the study and management of HIV-1 infection.
+	%This work disclosed novel HIV-host interactions and developed techniques and knowledge that will aid in the study and management of HIV-1 infection.
 
 	%These studies use deep sequencing and bioinformatics to aid in the understanding and management of HIV replication.
 %These studies illustrate the power of deep sequencing and bioinformatics in understanding and managing HIV replication and developing approaches to management.
